# AI-AGENTS

./: .dockerignore  .gitignore  README.md  ai-agent-prompt.md  docker-compose.dev.yml  docker-compose.yml  mise.toml
.devcontainer/: devcontainer.json
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/agents/: editor_agent.py  media_agent.py  orchestrator.py  research_agent.py  script_agent.py  thumbnail_agent.py  upload_agent.py  voice_agent.py
backend/api/: analytics.py  jobs.py  settings.py
backend/db/: mongo.py
backend/tasks/: celery_app.py  pipeline_tasks.py
backend/utils/: gemini.py  llm.py  veo.py  youtube.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentStatusCard.tsx  AutonomousToggle.tsx  LiveLogStream.tsx  StageApproval.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Analytics.tsx  Calendar.tsx  Dashboard.tsx  PipelineMonitor.tsx  ScriptEditor.tsx  Settings.tsx  Thumbnail.tsx
