[project]
name = "youtube-manager-backend"
version = "0.1.0"
description = "FastAPI, Celery, and agent backend for the YouTube channel manager."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "motor==3.4.0",
    "pymongo==4.7.3",
    "celery==5.4.0",
    "redis==5.0.6",
    "python-dotenv==1.0.1",
    "google-generativeai==0.7.2",
    "google-cloud-aiplatform==1.54.0",
    "moviepy==1.0.3",
    "pillow==10.3.0",
    "requests==2.32.3",
    "google-auth==2.30.0",
    "google-auth-oauthlib==1.2.0",
    "google-api-python-client==2.131.0",
    "pydantic==2.7.3",
    "pydantic-settings==2.3.3",
    "python-multipart==0.0.9",
    "aiofiles==23.2.1",
    "httpx==0.27.0",
    "websockets==12.0",
    "apscheduler==3.10.4",
]

[tool.uv]
package = false
